2005-10-01  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions-external/mustek_a3p1.desc
	  doc/descriptions/unsupported.desc: Added external mustek_a3p1
	  backend that supports Mustek P 3600 A3 Pro.
	* tools/Makefile.in: Added udev to list of directories that are
	  part of the distribution.
	* doc/descriptions.txt: Yet another "itsself".

2005-10-01  Julien Blache <jb@jblache.org>
	* doc/sane-find-scanner.man: Typo fix, s/itsself/itself/ from
	Alfie Costa.

2005-09-29  Eddy De Greef <eddy_de_greef at tiscali dot be>

	* backend/mustek_pp_cis.c: Minor bug fix: wrong model name was 
	  reported for 1200CP+ driver.

2005-09-29  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf backend/gt68xx_devices.c
	  backend/gt68xx_generic.c backend/gt68xx_generic.h
	  backend/gt68xx_high.c backend/gt68xx_low.c backend/gt68xx_low.h
	  doc/sane-gt68xx.man doc/descriptions/gt68xx.desc
	  doc/gt68xx/gt68xx.CHANGES doc/gt68xx/gt68xx.TODO: 
	  Added support for Plustek OpticSlim M12 (untested). Based on patch
	  from Gerhard Jaeger <gerhard@gjaeger.de>. Fixed gt68xx homepage
	  links in man page. Changed minimum version of libusb to 0.1.8.
	* doc/descriptions/unsupported.desc: Removed Plustek OpticSlim M12.

2005-09-28  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan-options.c backend/snapscan-scsi.c
	  backend/snapscan.c backend/snapscan.h:
	  Added 16 bit option for Epson scanners, untested.
	  Reenabled enhanced inquiry command for epson scanners.

2005-09-28  Julien Blache <jb@jblache.org>
	* tools/udev/convert-usermap.sh: Don't print 0x when matching VID
	and PID.

2005-09-28  Julien Blache <jb@jblache.org>
	* tools/udev/convert-usermap.sh: Added script to convert
	hotplug/libsane.usermap to a udev rules file. udev 070 + linux
	2.6.14 will deprecate hotplug.
	* tools/README: updated.

2005-09-28  Henning Meier-Geinitz <henning@meier-geinitz.de>
