@@ -6,6 +6,7 @@
 	* tools/Makefile.in: Added udev to list of directories that are
 	  part of the distribution.
 	* doc/descriptions.txt: Yet another "itsself".
+	* backend/sp15c.c: Fixed some warnings (bug #302290).
 
 2005-10-01  Julien Blache <jb@jblache.org>
 	* doc/sane-find-scanner.man: Typo fix, s/itsself/itself/ from
